# python-estudos

desafios_curso/: desafio_1.py  desafio_11.py  desafio_4.py  (+6 more)
framework/flask/projects/good-workout/: pyproject.toml
framework/flask/projects/good-workout/flaskr/: __init__.py  auth.py  blog.py  db.py  flaskr.md  private.py  schema.sql
framework/flask/projects/good-workout/flaskr/static/: index.css  login.css  register.css  style.css
framework/flask/projects/good-workout/flaskr/static/css/: avisos.css  contato.css  create.css  home.css  index.css  posts.css  style.css  update.css
framework/flask/projects/good-workout/flaskr/static/js/: base.js
framework/flask/projects/good-workout/flaskr/templates/: base.html
framework/flask/projects/good-workout/flaskr/templates/auth/: login.html  register.html
framework/flask/projects/good-workout/flaskr/templates/partials/: avisos.html  footer.html
framework/flask/projects/good-workout/flaskr/templates/private/: base.html
framework/flask/projects/good-workout/flaskr/templates/private/avisos/: avisos.html
framework/flask/projects/good-workout/flaskr/templates/private/contato/: contato.html
framework/flask/projects/good-workout/flaskr/templates/private/create/: create.html
framework/flask/projects/good-workout/flaskr/templates/private/home/: home.html
framework/flask/projects/good-workout/flaskr/templates/public/: base.html
framework/flask/projects/good-workout/flaskr/templates/res/: home.html  index.html
framework/flask/projects/good-workout/test/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py
(+169 files in other folders)
